css/slider.css
/*Super Extra small devices ( extra small phones, 280px and down)*/

#slider-container
{
	height: 50%;
    width: 100%;
	margin-top: 50px;
	text-align: center;
}
#slider-container:after
{
	width: 100%;
	height: 0px;
	background:linear-gradient(to bottom left, transparent 50%,white 0);
	position:relative;
	top:-69px; /*1px to be sure that there is no space between triangle and content*/
	margin-top:70px;
	z-index: 2;
	-webkit-transition: 1s ease-in-out;
	-moz-transition: 1s ease-in-out;
	-ms-transition:1s ease-in-out;
	-o-transition:1s ease-in-out;
	transition: 1s ease-in-out;
}
#slider-container.cuted:after
{
	width: 100%;
	height: 0px;
	-webkit-transition: 1s ease-in-out;
	-moz-transition: 1s ease-in-out;
	-ms-transition:1s ease-in-out;
	-o-transition:1s ease-in-out;
	transition: 1s ease-in-out;
	margin-top:0px;
}
.slider {
	position: relative;
	height: 100%;
}

/* kontener dla wszystkich slajdów */
.slides {
	height: 100%;
	position: relative;
}

/* pojedynczy slide */
.slide
{
	position: absolute;
	left:0;
	top:0;
	width:100%;
	height:100%;
	display: flex;
	display: -webkit-flex; 
	justify-content: center;
	align-items: center;
	-webkit-align-items: center; 
	flex-direction: column;
	-webkit-flex-direction: column;
	z-index: 0;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover !important;
	background-position: center center !important;
}

#slide1 {background: lightgray url("../img/slider/pixel/1.jpg")}
#slide2 {background: lightgray url("../img/slider/pixel/2.jpg")}
#slide3 {background: lightgray url("../img/slider/pixel/3.jpg")}

/* slide aktywny */
.slide-active
{
	z-index: 1;
}

/* elementy pojedynczego slajdu */

.slider .slide-title
{
	z-index: 5;
	max-width:70%;
	color:#fff;
	position: relative;
	font-size: calc(14px + 3.4vw);
	text-transform: uppercase;
	font-weight: normal;
	margin-top:0;
	margin-bottom: calc(1px + 2.5vw);
	text-align: center;
	font-family: 'Roboto Condensed', sans-serif;
	text-shadow: 3px 3px 1px black;
	}
.slider .slide-text
{
	z-index: 5;
	max-width:70%;
	color: white;
	position: relative;
	font-size: calc(10px + 1.6vw);
	text-align: center;
	font-family: serif;
	font-style: italic;
	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
}

/* animacja slajdów */
.slide
{
	opacity: 0;
	-webkit-transition: 0.8s all;
	-moz-transition: 0.8s all;
	-ms-transition:0.8s all;
	-o-transition:0.8s all;
	transition:0.8s all;
}
.slider .slide-title
{
	left:-3rem;
	opacity:0;
	-webkit-transition: 1s left, 1s opacity;
	-moz-transition: 1s left, 1s opacity;
	-ms-transition:1s left, 1s opacity;
	-o-transition:1s left, 1s opacity;
	transition: 1s left, 1s opacity;
}
.slider .slide-text
{
	left:-3rem;
	opacity:0;
	-webkit-transition: 1.2s 0.5s left, 1.2s 0.5s opacity;
	-moz-transition: 1.2s 0.5s left, 1.2s 0.5s opacity;
	-ms-transition:1.2s 0.5s left, 1.2s 0.5s opacity;
	-o-transition:1.2s 0.5s left, 1.2s 0.5s opacity;
	transition: 1.2s 0.5s left, 1.2s 0.5s opacity;
}

/* aktywny slide zmienia właściwości elementów */
.slide-active
{
	opacity: 1;
}
.slide-active .slide-title 
{
	left:0;
	opacity:1;
}
.slide-active .slide-text 
{
	left:0;
	opacity:1;
}

/* przyciski strzałek slajdu */
.slider-button-prev,
.slider-button-next
{
	cursor: pointer;
	z-index: 2;
	position: absolute;
	top:0;
	width: calc(28px + 2.2vw);
	margin: 0;
	height:100%;
	background: rgba(0,0,0,0.1);
	border:0;
	text-indent:-999px;
	overflow:hidden;
}

.slider-button-prev
{
	left:0;
}
.slider-button-next 
{
	right:0;
}
.slider-button-prev:focus,
.slider-button-next:focus
{
	outline: none;
}
.slider-button-prev:before,
.slider-button-next:before 
{
	display: flex;
	justify-content: center;
	align-items: center;
	position: absolute;
	left:0;
	top:0;
	width:100%;
	height:100%;
	font-size:2rem;
	color:#fff;
	text-indent: 0;
}
.slider-button-prev:before
{
	content:'<';
}
.slider-button-next:before
{
	content: '>';
}

/* slider dots */
.slider-dots
{
	z-index: 2;
	position: absolute;
	bottom: calc(8px + 1vw);
	padding:0;
	justify-content: center;
	list-style:none;
	width: 100%;
	margin: 0;
	border-radius: 50%;
}
.dots-container
{
	margin: 0 auto;
}
.slider-dot 
{
	margin: 0 calc(3px + 0.4vw);
	display:  inline-block;
}
.slider-dot-button
{
	background: transparent;
	width: calc(20px + 1vw);
	height: calc(20px + 1vw);
	border:0;
	text-indent:-999px;
	overflow: hidden;
	cursor: pointer;
	position: relative;
}
.slider-dot-button:before
{
	content:'';
	position: absolute;
	left:50%;
	top:50%;
	-webkit-transform: translate(-50%, -50%);
	-moz-transform: translate(-50%, -50%);
	-o-transform: translate(-50%, -50%);
	transform:translate(-50%, -50%);
	background: transparent;
	width: calc(10px + 0.5vw);
	height: calc(10px + 0.5vw);
	border-radius: 50%;
	-webkit-transition: 0.5s all;
	-moz-transition: 0.5s all;
	-ms-transition:0.5s all;
	-o-transition:0.5s all;
	transition:0.5s all;
	box-shadow:inset 0 0 0 2px rgba(255,255,255,0.5);
}
.slider-dot-active .slider-dot-button:before
{
	background: #fff;
	-webkit-transform: translate(-50%, -50%) scale(1.2);
	-moz-transform: translate(-50%, -50%) scale(1.2);
	-o-transform: translate(-50%, -50%) scale(1.2);
	transform:translate(-50%, -50%) scale(1.2);
}
.slider-dot-button:focus
{
	outline: none;
}
/* animacje */
.dots-container,
.slider-button-prev,
.slider-button-next
{
	opacity: 0.7;
}

@media only screen and (orientation: landscape) {
	#slider-container:after
	{
		top:-39px; /*1px to be sure that there is no space between triangle and content*/
		margin-top:40px;
	}
	#slider-container.cuted:after
	{
		height: 40px;
	}
}
@media only screen and (orientation: landscape) and (max-width: 992px) {
	#slider-container
	{
		height: calc(100% - 70px)!important;
	}
}
/* Small devices (portrait tablets, landscape phones, 640px and up) */
@media only screen and (min-width: 640px) {
	
	#slider-container:after
	{
		top:-39px; /*1px to be sure that there is no space between triangle and content*/
		margin-top:40px;
	}
	#slider-container.cuted:after
	{
		height: 40px;
	}
} 

/* Medium devices (landscape tablets, 800px and up) */
@media only screen and (min-width: 800px) {
	
	/* elementy pojedynczego slajdu */
	.slider .slide-title
	{
		margin-bottom: calc(8px + 1.5vw);
	}
	
	/* przyciski strzałek slajdu */
	.slider-button-prev,
	.slider-button-next
	{
		height:100%;
	}
} 

/* Large devices (laptops/desktops, 992px and up) */
@media only screen and (min-width: 992px) {
	
	#slider-container
	{
		height: 100%;
		margin-top: 0;
	}
	
	/* przyciski strzałek slajdu */
	.slider-button-prev,
	.slider-button-next
	{
		height: 50px;
		border: 0px solid #000000;
		top:50%;
		-webkit-transform: translate(0, -50%);
		-moz-transform: translate(0, -50%);
		-o-transform: translate(0, -50%);
		transform: translate(0, -50%);
	}
	.slider-button-prev
	{
		left: 0;
		border-radius: 0px 200px 200px 0px;
		-moz-border-radius: 0px 200px 200px 0px;
		-webkit-border-radius: 0px 200px 200px 0px;
	}
	.slider-button-next
	{
		
		border-radius: 200px 0px 0px 200px;
		-moz-border-radius: 200px 0px 0px 200px;
		-webkit-border-radius: 200px 0px 0px 200px;
	}
	
	/* animacje */
	.dots-container,
	.slider-button-prev,
	.slider-button-next
	{
		opacity: 0;
		-webkit-transition: 0.3s all;
		-moz-transition: 0.3s all;
		-ms-transition:0.3s all;
		-o-transition:0.3s all;
		transition: 0.3s all;
	}
	.slider:hover .dots-container,
	.slider:hover .slider-button-prev,
	.slider:hover .slider-button-next
	{
		opacity: 0.8;
		-webkit-transition: 0.3s all;
		-moz-transition: 0.3s all;
		-ms-transition:0.3s all;
		-o-transition:0.3s all;
		transition: 0.3s all;
	}
	.slider:hover .dots-container:hover,
	.slider:hover .slider-button-prev:hover,
	.slider:hover .slider-button-next:hover
	{
		opacity: 1;
		-webkit-transition: 0.3s all;
		-moz-transition: 0.3s all;
		-ms-transition:0.3s all;
		-o-transition:0.3s all;
		transition: 0.3s all;
	}
} 

